<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="E_SITP_PolecenieZmianyStanu" Id="{c3b11c56-ad47-080f-2981-df124c160eca}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_SITP_PolecenieZmianyStanu :
(
	brak			:= 0,
	Abort			:= 1,
    Clear			:= 2,
    Reset			:= 3,
    Start			:= 4,
    Stop			:= 5,
    Hold			:= 6,
    Unhold			:= 7,
    Suspend			:= 8,
    Unsuspend		:= 9,
    Complete		:= 10
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>