<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_Stan_Idle" Id="{6f8e51f0-8d79-03f1-2078-ce41112a24f3}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Stan_Idle EXTENDS FB_SITP_Element
VAR

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="FB_init" Id="{acbd3f98-fb5e-0bf7-356c-0c1506d99e0d}">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.PrzypiszTekstDo (refstEtykieta := THIS^.stNazwa, eJezyk := B_Baza.E_Jezyki.pl, wsTekst	:= "Bezczynny");   
THIS^.PrzypiszTekstDo (refstEtykieta := THIS^.stNazwa, eJezyk := B_Baza.E_Jezyki.de, wsTekst	:= "Leerlauf");    
THIS^.PrzypiszTekstDo (refstEtykieta := THIS^.stNazwa, eJezyk := B_Baza.E_Jezyki.en, wsTekst	:= "Idle");        
]]></ST>
      </Implementation>
    </Method>
    <Method Name="WywolajAkcjePBDlaStanu" Id="{fccf9e49-8895-0692-18a5-e39af0c2160b}">
      <Declaration><![CDATA[METHOD PUBLIC WywolajAkcjePBDlaStanu : BOOL
VAR_INPUT
	iNumerPB				: INT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[WywolajAkcjePBDlaStanu			:= THIS^.refstDaneSITP.refarrPB [iNumerPB].SP_Idle ();
]]></ST>
      </Implementation>
    </Method>
    <Method Name="ZwrocCzyMoznaWyjscZeStanu" Id="{676c4e96-80b1-0d77-06c7-3d15637cdd73}">
      <Declaration><![CDATA[(*			
	EVERDE sp. z o.o.
	Rafał Osajda		18.06.2025		TC 4024.66
	Zwraca true jak wyjście ze stanu jest możliwe
*)
METHOD PUBLIC ZwrocCzyMoznaWyjscZeStanu : BOOL

]]></Declaration>
      <Implementation>
        <ST><![CDATA[//warunki wyjść dla każdego ze stanów osobnym FB
IF (THIS^.refstDaneSITP.ePolecenieZmianyStanu = E_SITP_PolecenieZmianyStanu.Abort) THEN
	IF (THIS^.refstDaneSITP.arrStanyWlaczoneWTrybie [B_Baza.E_StanyPracy.Aborting]) THEN
		ZwrocCzyMoznaWyjscZeStanu					:= THIS^.ZgodaNaZmianeStanu (B_Baza.E_StanyPracy.Aborting);
	ELSE
		ZwrocCzyMoznaWyjscZeStanu					:= THIS^.BrakZgodyNaZmieneStanu (2);	//Stan do którego chcemy przejść jest wylaczony
	END_IF
ELSIF (THIS^.refstDaneSITP.ePolecenieZmianyStanu = E_SITP_PolecenieZmianyStanu.Stop) THEN
	IF (THIS^.refstDaneSITP.arrStanyWlaczoneWTrybie [B_Baza.E_StanyPracy.Stopping]) THEN
		ZwrocCzyMoznaWyjscZeStanu					:= THIS^.ZgodaNaZmianeStanu (B_Baza.E_StanyPracy.Stopping);
	ELSE
		ZwrocCzyMoznaWyjscZeStanu					:= THIS^.BrakZgodyNaZmieneStanu (2);	//Stan do którego chcemy przejść jest wylaczony
	END_IF
ELSIF (THIS^.refstDaneSITP.ePolecenieZmianyStanu = E_SITP_PolecenieZmianyStanu.Start) THEN
	IF (THIS^.refstDaneSITP.arrStanyWlaczoneWTrybie [B_Baza.E_StanyPracy.Starting]) THEN
		ZwrocCzyMoznaWyjscZeStanu					:= THIS^.ZgodaNaZmianeStanu (B_Baza.E_StanyPracy.Starting);
	ELSE
		ZwrocCzyMoznaWyjscZeStanu					:= THIS^.BrakZgodyNaZmieneStanu (2);	//Stan do którego chcemy przejść jest wylaczony
	END_IF
ELSE
	ZwrocCzyMoznaWyjscZeStanu						:= THIS^.BrakZgodyNaZmieneStanu (1);	//Bledny rozkaz dla zmiany stanu
END_IF
]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>