<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_Stan_Stopped" Id="{83868a15-4d25-0c54-211c-fdebf401b54b}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Stan_Stopped EXTENDS FB_SITP_Element
VAR

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="FB_init" Id="{831ef9f9-c8de-0d64-039e-60e265377385}">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.PrzypiszTekstDo (refstEtykieta := THIS^.stNazwa, eJezyk := B_Baza.E_Jezyki.pl, wsTekst	:= "Zatrzymany");
THIS^.PrzypiszTekstDo (refstEtykieta := THIS^.stNazwa, eJezyk := B_Baza.E_Jezyki.de, wsTekst	:= "Gestoppt");   
THIS^.PrzypiszTekstDo (refstEtykieta := THIS^.stNazwa, eJezyk := B_Baza.E_Jezyki.en, wsTekst	:= "Stopped");    
]]></ST>
      </Implementation>
    </Method>
    <Method Name="WywolajAkcjePBDlaStanu" Id="{fb2fd0c4-1ea2-04e7-372d-4183573e0de7}">
      <Declaration><![CDATA[METHOD PUBLIC WywolajAkcjePBDlaStanu : BOOL
VAR_INPUT
	iNumerPB				: INT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[WywolajAkcjePBDlaStanu			:= THIS^.refstDaneSITP.refarrPB [iNumerPB].SP_Stopped ();
]]></ST>
      </Implementation>
    </Method>
    <Method Name="ZwrocCzyMoznaWyjscZeStanu" Id="{78553390-899f-0811-2d9b-f6df974a3313}">
      <Declaration><![CDATA[(*			
	EVERDE sp. z o.o.
	Rafał Osajda		18.06.2025		TC 4024.66
	Zwraca true jak wyjście ze stanu jest możliwe
*)
METHOD PUBLIC ZwrocCzyMoznaWyjscZeStanu : BOOL

]]></Declaration>
      <Implementation>
        <ST><![CDATA[//warunki wyjść dla każdego ze stanów osobnym FB
IF (THIS^.refstDaneSITP.ePolecenieZmianyStanu = E_SITP_PolecenieZmianyStanu.Abort) THEN
	IF (THIS^.refstDaneSITP.arrStanyWlaczoneWTrybie [B_Baza.E_StanyPracy.Aborting]) THEN
		ZwrocCzyMoznaWyjscZeStanu					:= THIS^.ZgodaNaZmianeStanu (B_Baza.E_StanyPracy.Aborting);
	ELSE
		ZwrocCzyMoznaWyjscZeStanu					:= THIS^.BrakZgodyNaZmieneStanu (2);	//Stan do którego chcemy przejść jest wylaczony
	END_IF
ELSIF (THIS^.refstDaneSITP.ePolecenieZmianyStanu = E_SITP_PolecenieZmianyStanu.Reset OR
		(THIS^.refstDaneSITP.refbZredukowanaLiczbaPrzyciskow AND THIS^.refstDaneSITP.ePolecenieZmianyStanu = E_SITP_PolecenieZmianyStanu.Start)) THEN
	IF (THIS^.refstDaneSITP.arrStanyWlaczoneWTrybie [B_Baza.E_StanyPracy.Resetting]) THEN
		ZwrocCzyMoznaWyjscZeStanu					:= THIS^.ZgodaNaZmianeStanu (B_Baza.E_StanyPracy.Resetting);
	ELSE
		ZwrocCzyMoznaWyjscZeStanu					:= THIS^.BrakZgodyNaZmieneStanu (2);	//Stan do którego chcemy przejść jest wylaczony
	END_IF
ELSE
	ZwrocCzyMoznaWyjscZeStanu						:= THIS^.BrakZgodyNaZmieneStanu (1);	//Bledny rozkaz dla zmiany stanu
END_IF
]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>