<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_Stan_Stopping" Id="{cfff25e8-4f9a-0c9e-1538-fec5a5891c6c}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Stan_Stopping EXTENDS FB_SITP_Element
VAR

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="FB_init" Id="{63f422df-5f8a-0f15-238d-96d81967579b}">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.PrzypiszTekstDo (refstEtykieta := THIS^.stNazwa, eJezyk := B_Baza.E_Jezyki.pl, wsTekst	:= "Zatrzymywanie");
THIS^.PrzypiszTekstDo (refstEtykieta := THIS^.stNazwa, eJezyk := B_Baza.E_Jezyki.de, wsTekst	:= "Anhalten");     
THIS^.PrzypiszTekstDo (refstEtykieta := THIS^.stNazwa, eJezyk := B_Baza.E_Jezyki.en, wsTekst	:= "Stopping");     
]]></ST>
      </Implementation>
    </Method>
    <Method Name="WywolajAkcjePBDlaStanu" Id="{fbf60330-a948-0d08-0503-2c1870f51cf4}">
      <Declaration><![CDATA[METHOD PUBLIC WywolajAkcjePBDlaStanu : BOOL
VAR_INPUT
	iNumerPB				: INT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[WywolajAkcjePBDlaStanu			:= THIS^.refstDaneSITP.refarrPB [iNumerPB].SP_Stopping ();
]]></ST>
      </Implementation>
    </Method>
    <Method Name="ZwrocCzyMoznaWyjscZeStanu" Id="{ffe1fdf9-43d5-083d-2b86-d2c9a25ac428}">
      <Declaration><![CDATA[(*			
	EVERDE sp. z o.o.
	Rafał Osajda		18.06.2025		TC 4024.66
	Zwraca true jak wyjście ze stanu jest możliwe
*)
METHOD PUBLIC ZwrocCzyMoznaWyjscZeStanu : BOOL

]]></Declaration>
      <Implementation>
        <ST><![CDATA[//warunki wyjść dla każdego ze stanów osobnym FB
IF (THIS^.refstDaneSITP.ePolecenieZmianyStanu = E_SITP_PolecenieZmianyStanu.Abort) THEN
	IF (THIS^.refstDaneSITP.arrStanyWlaczoneWTrybie [B_Baza.E_StanyPracy.Aborting]) THEN
		ZwrocCzyMoznaWyjscZeStanu					:= THIS^.ZgodaNaZmianeStanu (B_Baza.E_StanyPracy.Aborting);
	ELSE
		ZwrocCzyMoznaWyjscZeStanu					:= THIS^.BrakZgodyNaZmieneStanu (2);	//Stan do którego chcemy przejść jest wylaczony
	END_IF
ELSIF (THIS^.refstDaneSITP.ePolecenieZmianyStanu <> E_SITP_PolecenieZmianyStanu.Abort AND
		THIS^.refstDaneSITP.ePolecenieZmianyStanu <> E_SITP_PolecenieZmianyStanu.brak) THEN
	ZwrocCzyMoznaWyjscZeStanu						:= THIS^.BrakZgodyNaZmieneStanu (1);	//Bledny rozkaz dla zmiany stanu
ELSIF (THIS^.refstDaneSITP.refbWyjdzZestanuAktywnego) THEN
	IF (THIS^.refstDaneSITP.arrStanyWlaczoneWTrybie [B_Baza.E_StanyPracy.Stopped]) THEN
		ZwrocCzyMoznaWyjscZeStanu					:= THIS^.ZgodaNaZmianeStanu (B_Baza.E_StanyPracy.Stopped);
	ELSE
		ZwrocCzyMoznaWyjscZeStanu					:= THIS^.BrakZgodyNaZmieneStanu (2);	//Stan do którego chcemy przejść jest wylaczony
	END_IF
ELSE
	ZwrocCzyMoznaWyjscZeStanu						:= THIS^.BrakZgodyNaZmieneStanu (3);	//Brak polecenia wyjsciua z stanu aktywnego - ing
END_IF
]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>